<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Arti</string>
    <string name="book_image">Book image</string>

    <string name="read">Read</string>
    <string name="read_later">read later</string>
    <string name="description">One of the interesting books you want to read today. Dune is a 1965 epic science fiction novel by American author Frank Herbert, originally published as two separate serials in Analog magazine. </string>
    <string name="book_details">Book details</string>
    <string name="buy_now">Buy now</string>
    <string name="order_details">Order Details</string>
    <string name="books">Books</string>
    <string name="book" tools:ignore="ExtraTranslation">Book</string>
    <string name="book_name">Book name</string>
    <string name="book_author">Book author</string>
    <string name="send_order">send order</string>
    <string name="cancel">Cancel</string>
    <string name="mail_subject">Your order</string>
    <string name="mail_text">Hello, dear friend. \n\nYour journey with book %1$s of %2$s will start soon. \nYour book cost is %3$s \n\nThank you for order, enjoy! </string>
    <string name="action_switch_layout">Switch Layout</string>

    <!--    Bottom bar navigation-->
    <string name="search_page_title">Search</string>
    <string name="reading_page_title">Reading</string>
    <string name="books_page_title">Books</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register if you don\'t have an account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title_name">Login</string>
    <string name="reader_title_name">Reader</string>



</resources>